--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Photon by HTML5 UP</title>
+		<title>Letterbox: Discover, Answer, Chat</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -17,15 +17,27 @@
 	<body>
 
 		<!-- Header -->
-			<section id="header">
-				<div class="inner">
-					<img class="app-logo" src="images/logo.png" />
-					<p><b>Letterbox</b> is a dating app that enables you to find people with compatible mindsets and opinions.</p>
-					<ul class="actions">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
-					</ul>
+		<section id="header">
+			<div class="inner">
+				<img class="app-logo" src="images/logo.png" />
+				<p><b>Letterbox</b> is a dating app that enables you to find people with compatible mindsets and opinions.</p>
+				<div class="app-link row">
+					<div class="6u 12u$(medium)">
+						<a href="">
+							<img class="app-store-logo" src="images/app-store.png" />
+						</a>
+					</div>
+					<div class="6u 12u$(medium)">
+						<a href="">
+							<img class="google-play-logo" src="images/google-play.png" />
+						</a>
+					</div>
 				</div>
-			</section>
+				<ul class="actions">
+					<li><a href="#one" class="button scrolly">Discover</a></li>
+				</ul>
+			</div>
+		</section>
 
 		<!-- One -->
 			<section id="one" class="main style1">
