--- a/index.html
+++ b/index.html
@@ -457,14 +457,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://www.facebook.com/sebastian.quek?fref=ts" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://github.com/LetterboxDev" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="mailto:letterboxdev@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Letterbox</li>
 				</ul>
 			</section>
 
