update content in how it works

--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
 							<img src="images/iphone-mockup-1.png"/>
 						</span>
 						<h3>Discover</h3>
-						<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+						<p>Discovering the profiles of other people using Letterbox.</p>
 					</div>
 					<div class="4u 12u$(medium)">
 						<span class="image fit">
 							<img src="images/iphone-mockup-2.png"/>
 						</span>
 						<h3>Answer</h3>
-						<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+						<p>Answering 5 'Would You Rather' questions from people your are interested in.</p>
 					</div>
 					<div class="4u$ 12u$(medium)">
 						<span class="image fit">
 							<img src="images/iphone-mockup-3.png"/>
 						</span>
 						<h3>Chat</h3>
-						<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+						<p>Starting to chat with the people that accept your letter.</p>
 					</div>
 				</div>
 			</div>
