update discover button link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					</div>
 				</div>
 				<ul class="actions">
-					<li><a href="#one" class="button scrolly">Discover</a></li>
+					<li><a href="#how-it-works" class="button scrolly">Discover</a></li>
 				</ul>
 			</div>
 		</section>
@@ -491,7 +491,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<li><a href="mailto:letterboxdev@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 		</ul>
 		<ul class="copyright">
-			<li>&copy; Letterbox</li>
+			<li>&copy; 2015 Letterbox</li>
 		</ul>
 	</section>
 
