App store buttons are now shown side-by-side on mobile

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 			<div class="inner">
 				<img class="app-logo" src="images/logo.png" />
 				<p><b>Letterbox</b> is a dating app that enables you to find people with compatible mindsets and opinions.</p>
-				<div class="app-link row">
-					<div class="6u 12u$(medium)">
+				<div class="app-link row 50%">
+					<div class="6u">
 						<a href="">
 							<img class="app-store-logo" src="images/app-store.png" />
 						</a>
 					</div>
-					<div class="6u 12u$(medium)">
+					<div class="6u">
 						<a href="">
 							<img class="google-play-logo" src="images/google-play.png" />
 						</a>
