--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<section id="how-it-works" class="main style1 special">
 			<div class="container">
 				<header class="major">
-					<h2>How it works</h2>
+					<h1>How it works</h1>
 				</header>
 				<p>Letterbox makes dating extremely simple.</p>
 				<div class="row 150%">
@@ -51,22 +51,22 @@
 						<span class="image fit">
 							<img src="images/iphone-mockup-1.png"/>
 						</span>
-						<h3>Discover</h3>
-						<p>Discovering the profiles of other people using Letterbox.</p>
+						<h2>Discover</h2>
+						<p>Discover other people on Letterbox.</p>
 					</div>
 					<div class="4u 12u$(medium)">
 						<span class="image fit">
 							<img src="images/iphone-mockup-2.png"/>
 						</span>
-						<h3>Answer</h3>
-						<p>Answering 5 'Would You Rather' questions from people your are interested in.</p>
+						<h2>Answer</h2>
+						<p>Send a letter by answering 5 'Would You Rather' questions on their profile.</p>
 					</div>
 					<div class="4u$ 12u$(medium)">
 						<span class="image fit">
 							<img src="images/iphone-mockup-3.png"/>
 						</span>
-						<h3>Chat</h3>
-						<p>Starting to chat with the people that accept your letter.</p>
+						<h2>Chat</h2>
+						<p>Start chatting with the people that accept your letter.</p>
 					</div>
 				</div>
 			</div>
