add app link in footer

--- a/index.html
+++ b/index.html
@@ -485,6 +485,23 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	<!-- Footer -->
 	<section id="footer">
+		<div class="app-link row 50%">
+				<div class="6u">
+					<a href="">
+						<img class="app-store-logo" src="images/app-store.png" />
+					</a>
+				</div>
+				<div class="6u">
+					<a href="">
+						<img class="google-play-logo" src="images/google-play.png" />
+					</a>
+				</div>
+			</div>
+			<ul class="actions">
+				<li><a href="#how-it-works" class="button scrolly">Discover</a></li>
+			</ul>
+		</div>
+
 		<ul class="icons">
 			<li><a href="https://www.facebook.com/sebastian.quek?fref=ts" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 			<li><a href="https://github.com/LetterboxDev" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
