Added disabled class for app store links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<p><b>Letterbox</b> is a dating app that enables you to find people with compatible mindsets and opinions.</p>
 				<div class="app-link row 50%">
 					<div class="6u">
-						<a href="">
+						<a class="disabled" href="">
 							<img class="app-store-logo" src="images/app-store.png" />
 						</a>
 					</div>
@@ -486,16 +486,15 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	<!-- Footer -->
 	<section id="footer">
 		<div class="app-link row 50%">
-				<div class="6u">
-					<a href="">
-						<img class="app-store-logo" src="images/app-store.png" />
-					</a>
-				</div>
-				<div class="6u">
-					<a href="">
-						<img class="google-play-logo" src="images/google-play.png" />
-					</a>
-				</div>
+			<div class="6u">
+				<a class="disabled" href="">
+					<img class="app-store-logo" src="images/app-store.png" />
+				</a>
+			</div>
+			<div class="6u">
+				<a href="">
+					<img class="google-play-logo" src="images/google-play.png" />
+				</a>
 			</div>
 		</div>
 
