Added privacy policy page

--- a/index.html
+++ b/index.html
@@ -504,6 +504,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		</ul>
 		<ul class="copyright">
 			<li>&copy; 2015 Letterbox</li>
+			<li><a href="privacy.html">Privacy Policy</a></li>
+			<li><a href="eula.html">EULA</a></li>
 		</ul>
 	</section>
 
