Updated last-updated styling

--- a/privacy.html
+++ b/privacy.html
@@ -15,7 +15,7 @@ permalink: /privacy/
     </header>
     <div class="row">
       <div class="12u">
-        <h6>LAST UPDATED: 25th day of October 2015</h6>
+        <h6 class="last-updated">LAST UPDATED: 25th day of October 2015</h6>
 
         <p>This Privacy Policy describes how users’ personal information is
         handled in order to engage in the services available on our
