--- a/terms.html
+++ b/terms.html
@@ -15,7 +15,7 @@ permalink: /terms/
     </header>  
     <div class="row">
       <div class="12u">
-        <h6>LAST UPDATED: 31st day of October 2015</h6>
+        <h6 class="last-updated">LAST UPDATED: 31st day of October 2015</h6>
         <table border="0" cellpadding="0" cellspacing="0" width="100%">
           <tbody>
             <tr>
