Update discover text

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: default
           <img src="images/iphone-mockup-1.png"/>
         </span>
         <h2>Discover</h2>
-        <p>Discover other people on Letterbox.</p>
+        <p>Pick 5 'Would You Rather' questions for your profile. See other people's profiles on Letterbox.</p>
       </div>
       <div class="4u 12u$(medium)">
         <span class="image fit">
