update ios link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
     <p><b>Letterbox</b> is a dating app that enables you to find people with compatible mindsets and opinions.</p>
     <div class="app-link row 50%">
       <div class="6u">
-        <a class="disabled" href="{{ site.app_store_link }}">
+        <a href="{{ site.app_store_link }}">
           <img class="app-store-logo" src="images/app-store.png" />
         </a>
       </div>
