--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@ layout: default
     <img class="app-logo" src="images/logo.png" />
     <p><b>Letterbox</b> is a dating app that enables you to find people with compatible mindsets and opinions.</p>
     <div class="app-link row 50%">
-      <div class="6u">
+      <div class="4u">
         <a href="{{ site.app_store_link }}">
           <img class="app-store-logo" src="images/app-store.png" />
         </a>
       </div>
-      <div class="6u">
+      <div class="4u">
         <a href="{{ site.play_store_link }}">
           <img class="google-play-logo" src="images/google-play.png" />
+        </a>
+      </div>
+      <div class="4u">
+        <a href="{{ site.web_link }}">
+          <img class="web-logo" src="images/web.png" />
         </a>
       </div>
     </div>
