add catalogue section in how it works

--- a/index.html
+++ b/index.html
@@ -38,26 +38,33 @@ layout: default
     </header>
     <p>Letterbox makes dating extremely simple.</p>
     <div class="row 150%">
-      <div class="4u 12u$(medium)">
+      <div class="3u 12u$(medium)">
         <span class="image fit">
           <img src="images/iphone-mockup-1.png"/>
         </span>
         <h2>Discover</h2>
         <p>Pick 5 'Would You Rather' questions for your profile. See other people's profiles on Letterbox.</p>
       </div>
-      <div class="4u 12u$(medium)">
+      <div class="3u 12u$(medium)">
         <span class="image fit">
           <img src="images/iphone-mockup-2.png"/>
         </span>
         <h2>Answer</h2>
         <p>Send a letter by answering 5 'Would You Rather' questions on their profile.</p>
       </div>
-      <div class="4u$ 12u$(medium)">
+      <div class="3u 12u$(medium)">
         <span class="image fit">
           <img src="images/iphone-mockup-4.png"/>
         </span>
         <h2>Chat</h2>
         <p>Start chatting with the people that accept your letter.</p>
+      </div>
+      <div class="3u$ 12u$(medium)">
+        <span class="image fit">
+          <img src="images/iphone-mockup-5.png"/>
+        </span>
+        <h2>Catalogue</h2>
+        <p>Explore exciting cutouts from our catalogue. Show them in your profile by liking these cutouts.</p>
       </div>
     </div>
   </div>
