--- a/stats.html
+++ b/stats.html
@@ -17,10 +17,10 @@ permalink: /stats/
       <div class="12u">
         <h6 class="last-updated">LAST UPDATED: 18th day of November 2015</h6>
         <div id="stats">
-          <h1><b>800</b> Users registered</h1>
-          <h1><b>1000</b> Letters delivered</h1>
-          <h1><b>500</b> Rooms created</h1>
-          <h1><b>10000</b> Messages sent</h1>
+          <h1><b>962</b> Users registered</h1>
+          <h1><b>6,046</b> Letters delivered</h1>
+          <h1><b>463</b> Rooms created</h1>
+          <h1><b>11,691</b> Messages sent</h1>
           <div class="row">
             <div class="6u">
               <div id="gender-user"></div>
@@ -47,11 +47,11 @@ permalink: /stats/
       [
         {
           "name": "Female",
-          "weight": 200
+          "weight": 257
         },
         {
           "name": "Male",
-          "weight": 600
+          "weight": 705
         }
       ],
 
@@ -123,24 +123,24 @@ permalink: /stats/
       "data": 
       [
         {
-          "name": "<20",
-          "weight": 177
+          "name": "<=20",
+          "weight": 35
         },
         {
           "name": "21~23",
-          "weight": 355
+          "weight": 475
         },
         {
           "name": "24~27",
-          "weight": 299
+          "weight": 323
         },
         {
           "name": "27~30",
-          "weight": 87
+          "weight": 57
         },
         {
-          "name": ">30",
-          "weight": 10
+          "name": ">=31",
+          "weight": 72
         }
       ],
 
@@ -214,110 +214,110 @@ permalink: /stats/
         {
           'name': 'number of users',
           'x': 1,
-          'y': 0,
-          'tooltip': 0
+          'y': 16,
+          'tooltip': 16
         },
         {
           'name': 'number of users',
           'x': 2,
-          'y': 10,
-          'tooltip': 10
+          'y': 17,
+          'tooltip': 17
         },
         {
           'name': 'number of users',
           'x': 3,
-          'y': 100,
-          'tooltip': 100
+          'y': 17,
+          'tooltip': 17
         },
         {
           'name': 'number of users',
           'x': 4,
-          'y': 106,
-          'tooltip': 106
+          'y': 38,
+          'tooltip': 38
         },
         {
           'name': 'number of users',
           'x': 5,
-          'y': 109,
-          'tooltip': 109
+          'y': 53,
+          'tooltip': 53
         },
         {
           'name': 'number of users',
           'x': 6,
-          'y': 109,
-          'tooltip': 109
+          'y': 59,
+          'tooltip': 59
         },
         {
           'name': 'number of users',
           'x': 7,
-          'y': 109,
-          'tooltip': 109
+          'y': 62,
+          'tooltip': 62
         },
         {
           'name': 'number of users',
           'x': 8,
-          'y': 130,
-          'tooltip': 130
+          'y': 64,
+          'tooltip': 64
         },
         {
           'name': 'number of users',
           'x': 9,
-          'y': 133,
-          'tooltip': 133
+          'y': 70,
+          'tooltip': 70
         },
         {
           'name': 'number of users',
           'x': 10,
-          'y': 410,
-          'tooltip': 410
+          'y': 77,
+          'tooltip': 77
         },
         {
           'name': 'number of users',
           'x': 11,
-          'y': 510,
-          'tooltip': 510
+          'y': 95,
+          'tooltip': 95
         },
         {
           'name': 'number of users',
           'x': 12,
-          'y': 810,
-          'tooltip': 810
+          'y': 110,
+          'tooltip': 110
         },
         {
           'name': 'number of users',
           'x': 13,
-          'y': 819,
-          'tooltip': 819
+          'y': 604,
+          'tooltip': 604
         },
         {
           'name': 'number of users',
           'x': 14,
-          'y': 819,
-          'tooltip': 819
+          'y': 775,
+          'tooltip': 775
         },
         {
           'name': 'number of users',
           'x': 15,
-          'y': 819,
-          'tooltip': 819
+          'y': 825,
+          'tooltip': 825
         },
         {
           'name': 'number of users',
           'x': 16,
-          'y': 819,
-          'tooltip': 819
+          'y': 872,
+          'tooltip': 872
         },
         {
           'name': 'number of users',
           'x': 17,
-          'y': 819,
-          'tooltip': 819
+          'y': 962,
+          'tooltip': 962
         },
         {
           'name': 'number of users',
           'x': 18,
-          'y': 819,
-          'tooltip': 819
+          'y': 962,
+          'tooltip': 962
         }
       ],
 
