Shifted last update to _config.yml

--- a/stats.html
+++ b/stats.html
@@ -15,7 +15,7 @@ permalink: /stats/
     </header>
     <div class="row">
       <div class="12u">
-        <h6 class="last-updated">LAST UPDATED: 18th day of November 2015</h6>
+        <h6 class="last-updated">Data as of {{ site.stats_last_update }}</h6>
         <div id="stats">
           <div id="summary">
             <h1><b>{{ site.registered_users }}</b> Users registered</h1>
